[build-system]
requires      = ["setuptools>=69.5.1", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "analyze_stocks_india"
version = "1.0.0"
authors = [
  { name="Prasanna Raut", email="prasannaraut36@gmail.com" },
]
description = "A python package to download historic stock prices from NSE website and process them to find best stock to purchase"
readme = "README.rst"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
]
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.2.2",
    "nltk>=3.8.1",
    "plotly>=5.22.0",
    "requests>=2.32.3",
    "bs4",
    "tenacity>=8.3.0",
]
[project.urls]
Homepage = "https://github.com/prasannaraut/analyze_stocks_india"
Issues = "https://github.com/prasannaraut/analyze_stocks_india/blob/main/issues"