[build-system]
requires      = ["setuptools>=49.6.0", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "analyze_stocks_india"
version = "1.0.2"
authors = [
  { name="Prasanna Raut", email="prasannaraut36@gmail.com" },
]
description = "A python package to download historic stock prices from NSE website and process them to find best stock to purchase"
readme = "README.rst"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
]
dependencies = [
    "numpy>=1.19.5",
    "pandas>=1.1.5",
    "nltk>=3.6.7",
    "plotly>=5.18.0",
    "requests>=2.27.1",
    "bs4",
    "tenacity>=8.2.2",
]
[project.urls]
Homepage = "https://github.com/prasannaraut/analyze_stocks_india"
Issues = "https://github.com/prasannaraut/analyze_stocks_india/blob/main/issues"